// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ali remax render change elements' order 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 5,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 6,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 7,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render change elements' order 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 5,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 6,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 7,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render change elements' order 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 5,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 6,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 7,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render conditional render 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render conditional render 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render conditional render 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 6,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 7,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render insert and remove element 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render insert and remove element 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 6,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 7,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render insert and remove element 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render insert new element 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render insert new element 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 6,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 7,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render insert new element 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 8,
              "text": "0",
              "type": "plain-text",
            },
          ],
          "id": 9,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 6,
              "text": "2",
              "type": "plain-text",
            },
          ],
          "id": 7,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        Object {
          "children": Array [
            Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          ],
          "id": 4,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 5,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render render correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "className": "foo",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render render native component correctly 1`] = `
Array [
  Object {
    "root.children": Array [
      0,
      0,
      Object {
        "children": Array [],
        "id": 1,
        "props": Object {
          "className": "class",
          "fooBar": "fooBar",
          "onClick": "$$REMAX_METHOD_1_onClick",
        },
        "text": undefined,
        "type": "native-component",
      },
    ],
  },
]
`;

exports[`ali remax render renders conditional fragment correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "one",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
    Object {
      "children": Array [
        Object {
          "id": 3,
          "text": "two",
          "type": "plain-text",
        },
      ],
      "id": 4,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render renders conditional fragment correctly 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "foo",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render renders empty style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": "",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render renders style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": "width:100rpx;height:100rpx;",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render renders unitless style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": "height:100rpx;flex:1;",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render renders vendor prefix style 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      ],
      "id": 2,
      "props": Object {
        "style": "-webkit-line-clamp:2;height:100rpx;",
      },
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render umount component 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "id": 1,
              "text": "foo",
              "type": "plain-text",
            },
          ],
          "id": 2,
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      ],
      "id": 3,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render umount component 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": 3,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render update element props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": 1,
          "props": Object {
            "className": "className",
            "disabled": false,
            "style": "display:flex;flex:1;",
          },
          "text": undefined,
          "type": "input",
        },
      ],
      "id": 2,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`ali remax render update element props 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": 1,
          "props": Object {
            "className": "updateClassName",
            "disabled": true,
            "style": "display:flex;flex:2;",
          },
          "text": undefined,
          "type": "input",
        },
      ],
      "id": 2,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  ],
  "id": 0,
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;
